src/test/deca/syntax/valid/decl_var/test_decl_var_float_finite.deca
// Description:
//    Programme minimaliste affectant une valeur floatante finie
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2024

{
        float a;
        a = 10.0e+10;
}
