src/test/deca/syntax/invalid/decl_class/test_other_than_field_method.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// mismatched input 'return' expecting {'extends', '{'}
// Historique:
//    cree le 01/01/2024

class A {
    return 0;
}

